--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,35 +1,70 @@
 <div class="w-[380px] p-4 rounded-lg card-shadow">
   <app-carousel />
 
-  <p class="font-bold text-lg mb-2 text-licify-gray-2">Carvajal Condominio</p>
-  <span class="block text-gray-400 text-sm mb-1">Inicia: 12/03/2024</span>
-  <span class="block text-gray-400 text-sm mb-1">Finaliza: 12/10/2024</span>
+  <p class="font-bold text-lg mb-2 text-licify-gray-2">{{ data.name }}</p>
+  <span class="block text-gray-400 text-sm mb-1"
+    >Inicia: {{ data.init_date | date : "YYYY-MM-dd" }}</span
+  >
+  <span class="block text-gray-400 text-sm mb-1"
+    >Finaliza: {{ data.end_date | date : "YYYY-MM-dd" }}</span
+  >
   <div class="flex justify-between items-center">
     <span class="block text-gray-400 text-sm mb-1 font-medium"
-      >Valor: $ 239.000.000</span
+      >Costo proyecto: {{ handleTotalProject(data.items) | currency }}</span
     >
 
-    <button class="bg-licify-yellow p-3 rounded-md">
-      <svg
-        xmlns="http://www.w3.org/2000/svg"
-        fill="none"
-        viewBox="0 0 24 24"
-        stroke-width="1.5"
-        stroke="currentColor"
-        class="w-6 h-6"
+    <div class="flex gap-2">
+      <button
+        (click)="apply(data._id)"
+        class="bg-green-600 p-2 rounded-md text-white"
+        *ngIf="activeApply"
+        pButton
+        pTooltip="Aplicar al proyecto"
+        tooltipPosition="bottom"
       >
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z"
-        />
-        <path
-          stroke-linecap="round"
-          stroke-linejoin="round"
-          d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
-        />
-      </svg>
-    </button>
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M9 12.75 11.25 15 15 9.75M21 12c0 1.268-.63 2.39-1.593 3.068a3.745 3.745 0 0 1-1.043 3.296 3.745 3.745 0 0 1-3.296 1.043A3.745 3.745 0 0 1 12 21c-1.268 0-2.39-.63-3.068-1.593a3.746 3.746 0 0 1-3.296-1.043 3.745 3.745 0 0 1-1.043-3.296A3.745 3.745 0 0 1 3 12c0-1.268.63-2.39 1.593-3.068a3.745 3.745 0 0 1 1.043-3.296 3.746 3.746 0 0 1 3.296-1.043A3.746 3.746 0 0 1 12 3c1.268 0 2.39.63 3.068 1.593a3.746 3.746 0 0 1 3.296 1.043 3.746 3.746 0 0 1 1.043 3.296A3.745 3.745 0 0 1 21 12Z"
+          />
+        </svg>
+      </button>
+
+      <button
+        class="bg-licify-yellow p-2 rounded-md"
+        *ngIf="activeShow"
+        pButton
+        pTooltip="Ver proyecto"
+        tooltipPosition="bottom"
+      >
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          fill="none"
+          viewBox="0 0 24 24"
+          stroke-width="1.5"
+          stroke="currentColor"
+          class="w-6 h-6"
+        >
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M2.036 12.322a1.012 1.012 0 0 1 0-.639C3.423 7.51 7.36 4.5 12 4.5c4.638 0 8.573 3.007 9.963 7.178.07.207.07.431 0 .639C20.577 16.49 16.64 19.5 12 19.5c-4.638 0-8.573-3.007-9.963-7.178Z"
+          />
+          <path
+            stroke-linecap="round"
+            stroke-linejoin="round"
+            d="M15 12a3 3 0 1 1-6 0 3 3 0 0 1 6 0Z"
+          />
+        </svg>
+      </button>
+    </div>
   </div>
 </div>
-
