--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,91 +1,37 @@
-<div id="default-carousel" class="relative w-full mb-2" data-carousel="slide">
+<div
+  id="default-carousel"
+  class="relative w-full mb-2"
+  data-carousel="static"
+>
   <!-- Carousel wrapper -->
   <div class="relative h-56 overflow-hidden rounded-lg">
-    <!-- Item 1 -->
-    <div class="hidden duration-[1000ms] ease-in-out" data-carousel-item>
+    <div
+      *ngFor="let image of images; let i = index"
+      class="hidden duration-[{{ duration }}ms] ease-in-out"
+      data-carousel-item
+    >
       <img
-        src="https://licify-images.s3.amazonaws.com/house_3.jpg"
+        [src]="image"
         class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover"
-        alt="..."
-        loading="lazy"
-      />
-    </div>
-    <!-- Item 2 -->
-    <div class="hidden duration-[1000ms] ease-in-out" data-carousel-item>
-      <img
-        src="https://licify-images.s3.amazonaws.com/house_2.jpg"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover"
-        alt="..."
-        loading="lazy"
-      />
-    </div>
-    <!-- Item 3 -->
-    <div class="hidden duration-[1000ms] ease-in-out" data-carousel-item>
-      <img
-        src="https://licify-images.s3.amazonaws.com/house_3.jpg"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover"
-        alt="..."
-        loading="lazy"
-      />
-    </div>
-    <!-- Item 4 -->
-    <div class="hidden duration-[1000ms] ease-in-out" data-carousel-item>
-      <img
-        src="https://licify-images.s3.amazonaws.com/house_2.jpg"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2 bg-cover"
-        alt="..."
-        loading="lazy"
-      />
-    </div>
-    <!-- Item 5 -->
-    <div class="hidden duration-[1000ms] ease-in-out" data-carousel-item>
-      <img
-        src="https://licify-images.s3.amazonaws.com/house_3.jpg"
-        class="absolute block w-full -translate-x-1/2 -translate-y-1/2 top-1/2 left-1/2"
         alt="..."
         loading="lazy"
       />
     </div>
   </div>
+
   <!-- Slider indicators -->
   <div
     class="absolute z-30 flex -translate-x-1/2 bottom-5 left-1/2 space-x-3 rtl:space-x-reverse"
   >
-    <button
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="true"
-      aria-label="Slide 1"
-      data-carousel-slide-to="0"
-    ></button>
-    <button
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 2"
-      data-carousel-slide-to="1"
-    ></button>
-    <button
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 3"
-      data-carousel-slide-to="2"
-    ></button>
-    <button
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 4"
-      data-carousel-slide-to="3"
-    ></button>
-    <button
-      type="button"
-      class="w-3 h-3 rounded-full"
-      aria-current="false"
-      aria-label="Slide 5"
-      data-carousel-slide-to="4"
-    ></button>
+    <span *ngFor="let image of images; let i = index">
+      <button
+        type="button"
+        class="w-3 h-3 rounded-full"
+        aria-current="true"
+        aria-label="Slide 2"
+        data-carousel-slide-to="0"
+      ></button>
+    </span>
   </div>
   <!-- Slider controls -->
   <button
