--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -5,40 +5,40 @@
         class="relative flex flex-col min-w-0 break-words w-full shadow-lg rounded-lg bg-white border-0 px-6 py-6"
       >
         <div class="flex-auto px-4 lg:px-10 p-10">
-          <div class="text-blueGray-400 text-center mb-3 font-bold">
+          <div class="text-center mb-3 font-bold">
             <small class="text-lg">Iniciar Sesión</small>
           </div>
-          <form>
+          <form (submit)="submit()" [formGroup]="loginForm">
             <div class="relative w-full mb-3">
               <label
-                class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
-                htmlFor="grid-password"
+                class="block uppercase text-xs font-bold mb-2"
               >
                 Correo electrónico
               </label>
               <input
                 type="email"
-                class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="email"
+                class="border-0 px-3 py-3 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
               />
             </div>
 
             <div class="relative w-full mb-3">
               <label
-                class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
-                htmlFor="grid-password"
+                class="block uppercase text-xs font-bold mb-2"
               >
                 Contraseña
               </label>
               <input
                 type="password"
-                class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="password"
+                class="border-0 px-3 py-3 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
               />
             </div>
 
             <div class="text-center mt-6">
               <button
                 class="bg-licify-yellow text-white active:bg-licify-yellow text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
-                type="button"
+                type="submit"
               >
                 Ingresar
               </button>
