--- a/src/app/views/projects/project-home/project-home.component.html
+++ b/src/app/views/projects/project-home/project-home.component.html
@@ -8,8 +8,10 @@
       >
     </div>
     <a
-      [routerLink]="['/admin/project-home/register']"
+      [routerLink]="['/constructor/projects/register']"
       class="bg-licify-gray-2 p-3 rounded-md h-[48px] flex items-center justify-center text-white font-bold"
+      pTooltip="Crear proyecto"
+      tooltipPosition="bottom"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -25,26 +27,13 @@
           d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m3.75 9v6m3-3H9m1.5-12H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z"
         />
       </svg>
-      <span class="block ml-4">Registrar</span>
+      <span class="block ml-4">Nuevo</span>
     </a>
   </div>
 
   <div class="flex gap-5 flex-wrap justify-center">
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
-    <app-card />
+    <span *ngFor="let project of projects; let i = index">
+      <app-card [data]="project" />
+    </span>
   </div>
 </section>
