--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
     <button
       class="cursor-pointer text-black opacity-50 md:hidden px-3 py-1 text-xl leading-none bg-transparent rounded border border-solid border-transparent"
       type="button"
-      (click)="toggleCollapseShow('bg-white m-2 py-3 px-6')"
+      (click)="toggleCollapseShow('bg-licify-yellow m-2 py-3 px-6')"
     >
       <svg
         xmlns="http://www.w3.org/2000/svg"
@@ -85,8 +85,8 @@
             #adminActive="routerLinkActive"
             [ngClass]="
               adminActive.isActive
-                ? 'text-licify-gray hover:text-white'
-                : 'text-licify-gray-2 hover:text-licify-gray-2'
+                ? 'text-orange-700 hover:text-white'
+                : 'text-licify-gray-2 hover:text-white'
             "
           >
             <div class="flex items-center">
@@ -118,8 +118,8 @@
             #adminProjectHome="routerLinkActive"
             [ngClass]="
               adminProjectHome.isActive
-                ? 'text-licify-gray hover:text-white'
-                : 'text-licify-gray-2 hover:text-licify-gray-2'
+                ? 'text-orange-700 hover:text-white'
+                : 'text-licify-gray-2 hover:text-white'
             "
           >
             <div class="flex items-center">
@@ -151,8 +151,8 @@
             #adminApply="routerLinkActive"
             [ngClass]="
               adminApply.isActive
-                ? 'text-licify-gray hover:text-white'
-                : 'text-licify-gray-2 hover:text-licify-gray-2'
+                ? 'text-orange-700 hover:text-white'
+                : 'text-licify-gray-2 hover:text-white'
             "
           >
             <div class="flex items-center">
