--- a/src/app/views/auth/login/login.component.html
+++ b/src/app/views/auth/login/login.component.html
@@ -48,7 +48,7 @@
       </div>
       <div class="flex flex-wrap mt-6 relative">
         <div class="w-1/2">
-          <a [routerLink]="['/auth/register']" class="text-gray-500">
+          <a [routerLink]="['/register']" class="text-gray-500">
             <small>Crear nueva cuenta</small>
           </a>
         </div>
