--- a/src/app/components/navbars/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/navbars/admin-navbar/admin-navbar.component.html
@@ -1,6 +1,6 @@
 <!-- Navbar -->
 <nav
-  class="absolute top-0 left-0 w-full z-10 bg-transparent md:flex-row md:flex-nowrap md:justify-start flex items-center p-4 bg-gray-800"
+  class="absolute top-0 left-0 w-full z-10 bg-transparent md:flex-row md:flex-nowrap md:justify-start flex items-center p-4 md:bg-gray-800"
 >
   <div
     class="w-full mx-autp items-center flex justify-between md:flex-nowrap flex-wrap md:px-10 px-4"
