--- a/src/app/views/auth/register/register.component.html
+++ b/src/app/views/auth/register/register.component.html
@@ -8,7 +8,7 @@
           <div class="text-blueGray-400 text-center mb-3 font-bold">
             <small class="text-lg">Registrar Nueva Cuenta</small>
           </div>
-          <form>
+          <form (submit)="submit()" [formGroup]="registerForm">
             <div class="relative w-full mb-3">
               <label
                 class="block uppercase text-blueGray-600 text-xs font-bold mb-2"
@@ -21,6 +21,7 @@
                 name="role"
                 id="role"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="role"
               >
                 <option value="">Elija una opción</option>
                 <option value="constructor">Constructor</option>
@@ -36,8 +37,9 @@
                 Nombre
               </label>
               <input
-                type="email"
+                type="text"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="name"
               />
             </div>
 
@@ -51,6 +53,7 @@
               <input
                 type="email"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="email"
               />
             </div>
 
@@ -64,18 +67,26 @@
               <input
                 type="password"
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 bg-white rounded text-sm shadow focus:outline-none focus:ring w-full ease-linear transition-all duration-150"
+                formControlName="password"
               />
             </div>
 
             <div class="text-center mt-6">
               <button
                 class="bg-licify-yellow text-white active:bg-licify-yellow text-sm font-bold uppercase px-6 py-3 rounded shadow hover:shadow-lg outline-none focus:outline-none mr-1 mb-1 w-full ease-linear transition-all duration-150"
-                type="button"
+                type="submit"
               >
                 Crear
               </button>
             </div>
           </form>
+        </div>
+      </div>
+      <div class="flex flex-wrap mt-6 relative">
+        <div class="w-1/2">
+          <a [routerLink]="['/login']" class="text-gray-500">
+            <small>Ir al login</small>
+          </a>
         </div>
       </div>
     </div>
