--- a/src/app/views/projects/project-register/project-register.component.html
+++ b/src/app/views/projects/project-register/project-register.component.html
@@ -1,7 +1,7 @@
 <section class="flex flex-col gap-4 justify-center items-center">
   <h2 class="text-2xl font-bold">Registrar nuevo proyecto</h2>
   <div class="w-1/2 rounded-md shadow-md bg-slate-50 p-8">
-    <form (submit)="submit()" [formGroup]="projectForm">
+    <form (submit)="submit()" [formGroup]="projectForm" enctype="multipart/form-data">
       <section class="flex flex-col gap-3">
         <div class="relative w-full mb-3">
           <label
@@ -42,6 +42,25 @@
 
       <section>
         <h3 class="text-gray-400 my-4 block">Imágenes del proyecto</h3>
+
+        <div class="card flex justify-content-center gap-2">
+          <input
+            class="mb-2"
+            type="file"
+            accept="image/*"
+            multiple
+            (change)="selectFiles($event)"
+          />
+        </div>
+        <div class="flex gap-2 overflow-x-scroll">
+          @for (preview of previews; track $index) {
+          <img
+            [src]="preview"
+            class="preview"
+            [alt]="preview"
+          />
+          }
+        </div>
       </section>
 
       <section>
@@ -165,4 +184,5 @@
       </div>
     </form>
   </div>
+  <pre>{{ projectForm.value | json }}</pre>
 </section>
