correccion estilos css

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,4 +1,4 @@
-<div class="w-[380px] p-4 rounded-lg card-shadow">
+<div class="w-[340px] md:w-[380px] p-4 rounded-lg card-shadow">
   <app-carousel [images]="getImages()" [id]="data._id" />
 
   <p class="font-bold text-lg mb-2 text-licify-gray-2">{{ data.name }}</p>
