--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -175,6 +175,39 @@
             </div>
           </a>
         </li>
+
+        <li class="items-center md:hidden">
+          <a
+            (click)="exit()"
+            class="text-xs uppercase py-3 font-bold block cursor-pointer"
+            routerLinkActive
+            #adminApply="routerLinkActive"
+            [ngClass]="
+              adminApply.isActive
+                ? 'text-orange-700 hover:text-white'
+                : 'text-licify-gray-2 hover:text-white'
+            "
+          >
+            <div class="flex items-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke-width="1.5"
+                stroke="currentColor"
+                class="w-6 h-6"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  d="M15.75 9V5.25A2.25 2.25 0 0 0 13.5 3h-6a2.25 2.25 0 0 0-2.25 2.25v13.5A2.25 2.25 0 0 0 7.5 21h6a2.25 2.25 0 0 0 2.25-2.25V15m3 0 3-3m0 0-3-3m3 3H9"
+                />
+              </svg>
+
+              <span class="block ml-5">Cerrar Sesión</span>
+            </div>
+          </a>
+        </li>
       </ul>
     </div>
   </div>
