--- a/src/app/layouts/admin/admin.component.html
+++ b/src/app/layouts/admin/admin.component.html
@@ -1,7 +1,7 @@
 <div>
   <app-sidebar/>
   <div class="relative md:ml-64">
-    <div class="px-4 md:px-10 mx-auto w-full py-24">
+    <div class="px-4 md:px-10 mx-auto w-full py-10 md:py-24">
       <app-admin-navbar/>
       <router-outlet/>
     </div>
