--- a/src/app/views/projects/apply/apply.component.html
+++ b/src/app/views/projects/apply/apply.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col gap-4 justify-center items-center">
   <h2 class="text-2xl font-bold">Aplicar a proyecto</h2>
-  <div class="rounded-md shadow-md bg-slate-50 p-8">
+  <div class="w-full p-6 lg:w-1/2 rounded-md shadow-md bg-slate-50 lg:p-8">
     <form (submit)="submit()" [formGroup]="projectForm">
       <section class="flex flex-col gap-3">
         <div class="relative w-full mb-3">
@@ -52,7 +52,7 @@
         >
           <div
             [formGroupName]="i"
-            class="flex gap-3 items-center justify-between my-2"
+            class="flex flex-col md:flex-row gap-3 items-center justify-between my-2 rounded shadow-md p-4 md:shadow-none md:p-0"
           >
             <div class="flex flex-col gap-1 w-full">
               <input
