--- a/src/app/views/projects/project-register/project-register.component.html
+++ b/src/app/views/projects/project-register/project-register.component.html
@@ -1,6 +1,6 @@
 <section class="flex flex-col gap-4 justify-center items-center">
   <h2 class="text-2xl font-bold">Registrar nuevo proyecto</h2>
-  <div class="w-1/2 rounded-md shadow-md bg-slate-50 p-8">
+  <div class="p-6 lg:w-1/2 rounded-md shadow-md bg-slate-50 lg:p-8">
     <form
       (submit)="submit()"
       [formGroup]="projectForm"
@@ -96,7 +96,7 @@
         >
           <div
             [formGroupName]="i"
-            class="flex gap-3 items-center justify-between my-2"
+            class="flex flex-col lg:flex-row gap-3 items-center justify-between my-2"
           >
             <div class="flex flex-col gap-1 w-full">
               <input
